添加了getHealth函数以及背景音乐播放功能(需要后端信号触发)

--- a/src.qrc
+++ b/src.qrc
@@ -8,5 +8,6 @@
         <file>src/image4.png</file>
         <file>src/image5.png</file>
         <file>src/image6.png</file>
+        <file>src/music/battle0.mp3</file>
     </qresource>
 </RCC>
